# mosyo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  token.example
.github/workflows/: ci-cd.yml  main.yml
src/: Bot.h  bot.cpp  main.cpp
src/plugins/blind-test/: BlindTest.cpp  BlindTest.h
src/plugins/music-player/: MusicPlayer.cpp  MusicPlayer.h
